syntax = "proto3";
package model;
option go_package = "/model/pb";
import "cart_message.proto";


service CartService {
  rpc FindCartByUserId(FindCartByUserIdRequest) returns (Cart);
  rpc FindCartItems(FindCartItemsRequest) returns (FindCartItemsResponse);
}